--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>libbe</artifactId>
     <groupId>com.radixpro.enigma</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0</version>
     <packaging>jar</packaging>
     <pluginRepositories>
         <pluginRepository>
@@ -20,28 +20,13 @@
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
-<!--    <name>mainModule</name>-->
-
     <properties>
-<!--        <exec.maven.plugin.version>1.6.0</exec.maven.plugin.version>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.code.style>official</kotlin.code.style>
         <kotlin.version>1.4.30</kotlin.version>
         <mack.version>2.01.00-02</mack.version>
-<!--        <maven.compiler.release>14</maven.compiler.release>-->
-<!--        <java.version>14</java.version>-->
         <junit.version>4.12</junit.version>
     </properties>
-
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>mavenCentral</id>-->
-<!--            <url>https://repo1.maven.org/maven2/</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
-
-
-
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
         <testSourceDirectory>src/test/kotlin</testSourceDirectory>
