--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>libbe</artifactId>
     <groupId>com.radixpro.enigma</groupId>
-    <version>0.0</version>
+    <version>0.1</version>
     <packaging>jar</packaging>
     <pluginRepositories>
         <pluginRepository>
@@ -19,6 +19,11 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
+        <pluginRepository>
+            <id>jcenter</id>
+            <name>JCenter</name>
+            <url>https://jcenter.bintray.com/</url>
+        </pluginRepository>
     </pluginRepositories>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,6 +31,7 @@
         <kotlin.version>1.4.30</kotlin.version>
         <mack.version>2.01.00-02</mack.version>
         <junit.version>4.12</junit.version>
+        <dokka.version>1.4.20</dokka.version>
     </properties>
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
@@ -57,6 +63,20 @@
                     </args>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jetbrains.dokka</groupId>
+                <artifactId>dokka-maven-plugin</artifactId>
+                <version>${dokka.version}</version>
+                <executions>
+                    <execution>
+                        <phase>pre-site</phase>
+                        <goals>
+                            <goal>dokka</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
