--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <dokka.version>1.4.20</dokka.version>
         <junit.version>4.12</junit.version>
         <kotlin.code.style>official</kotlin.code.style>
-        <kotlin.version>1.4.30</kotlin.version>
+        <kotlin.version>1.4.31</kotlin.version>
         <mack.version>2.01.00-02</mack.version>
         <opencsv.version>5.3</opencsv.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -87,7 +87,7 @@
             <version>${opencsv.version}</version>
         </dependency>
         <dependency>
-            <groupId>de.th-mack</groupId>
+            <groupId>de</groupId>
             <artifactId>seport</artifactId>
             <version>${mack.version}</version>
         </dependency>
